# top-apps-ghcjs

./: Makefile  README.md  quid2-net-apps-ghcjs.cabal  stack.yaml  top-apps-ghcjs.cabal
app/Chat/: Model.hs  chat.hs
app/UI/: Components.hs  Dispatcher.hs  ServerState.hs  Store.hs  Views.hs  ui.hs
src/GHCJS/: Util.hs
test/: Spec.hs
www/chat/: Makefile  build  index-dev.html  index.html
www/ui/: Makefile  app.css  build  index-dev.html  index.html
